Tests/context/invalid/class23.java
class A {
    int x;
}
class A1 extends A{
    int x1;
}
class A2 extends A{
    int x2;
}

{
    A2 a2 = new A2();
    a2.x1=5;
}